# Worms

./: Common.props  EmbarkWorms.sln  EmbarkWorms.vcxproj  EmbarkWorms.vcxproj.filters  FWorm.cpp  FWorm.h  JukeBox.cpp  JukeBox.h  Optimizations.props  README.md
EMB/: ASSIGNMENT.md  LICENSE
EMB/WormsGame/: FWorm.cpp  FWorm.h  Game.cpp  Game.h  GameState.cpp  GameState.h  JukeBox.cpp  JukeBox.h  WormAI.cpp  WormAI.h
EMB/WormsLib/: TinyPixelNoise.cpp  TinyPixelNoise.h  Worms.cpp  Worms.h  WormsAudioHelp.cpp  WormsAudioHelp.h  WormsVideoHelp.cpp  WormsVideoHelp.h
EMB/linux/: CMakeLists.txt
EMB/vs2019/: EmbarkWorms.vcxproj  EmbarkWorms.vcxproj.filters  HandyUtils.h  Logger.cpp  Logger.h  VecMath.h
